# cminitests

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  NEWS.md  README.md  appveyor.yml  configure
examples/: CMakeLists.txt  test_skeleton.c  test_skeleton.sh
src/: CMakeLists.txt  cminitests.c  cminitests.h  shminitests.sh
tests/: CMakeLists.txt  test_assertions.c  test_init.c  test_no_tests.c  test_sh_evaluation.sh  test_test_counts.c
